objects/Picklist__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The Picklist custom setting will contain the list of available dynamic picklists.  The Alpha Sort attribute is TRUE if the items are sorted alphabetically.  When FALSE, the sort order must be specified in the PicklistEntry custom setting.</description>
    <fields>
        <fullName>Alpha_Sort__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are the picklist values sorted alphabetically?</inlineHelpText>
        <label>Alpha Sort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <inlineHelpText>Picklist display name</inlineHelpText>
        <label>Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Picklist</label>
</CustomObject>